syntax = "proto3";
package crunchert;

enum AggregationProto {
    sum = 0;
    avg = 1;
    min = 2;
    max = 3;
}

message AggChartRequestProto {
    repeated uint64 stream_ids = 1;
    int64 start_unix_s = 2;
    int64 stop_unix_s = 3;
    uint32 step_s = 4;
    AggregationProto aggregation = 5;
}
message NonAggChartRequestProto {
    repeated uint64 stream_ids = 1;
    int64 start_unix_s = 2;
    int64 stop_unix_s = 3;
    uint32 step_s = 4;
}

message AggChartReplyProto {
    repeated int64 timestamps = 1;
    repeated float value = 2;
}

message DataPointsProto {
    uint64 stream_id = 1;
    repeated int64 timestamps = 2;
    repeated float values = 3;
}

message NonAggChartReplyProto {
    repeated DataPointsProto data = 1;
}

message ImportRequestProto {
    repeated DataPointsProto data = 1;
}

message ImportReplyProto {
    string message = 1;
}

service Crunchert {
    rpc Import(ImportRequestProto) returns (ImportReplyProto);
    rpc AggChart(AggChartRequestProto) returns (AggChartReplyProto);
    rpc NonAggChart(NonAggChartRequestProto) returns (NonAggChartReplyProto);
}